[gd_scene load_steps=8 format=2]

[ext_resource path="res://res/enemies/jumper.png" type="Texture" id=1]
[ext_resource path="res://src/enemies/JumpEnemy.gd" type="Script" id=2]
[ext_resource path="res://res/enemies/shadow.png" type="Texture" id=3]
[ext_resource path="res://src/HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://res/enemies/jumper_explosion.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.6874
height = 35.5301

[sub_resource type="CapsuleShape2D" id=2]
radius = 20.9799
height = 85.7983

[node name="JumpEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 20
script = ExtResource( 2 )

[node name="DamageSprite" type="Sprite" parent="."]
position = Vector2( 0.397, 16 )
scale = Vector2( 2, 1.5 )
texture = ExtResource( 5 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 2.38419e-07 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="HealthBar" parent="Sprite" instance=ExtResource( 4 )]
position = Vector2( 0, -20 )
scale = Vector2( 0.4, 0.4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.397217, 15.4496 )
rotation = 1.5708
shape = SubResource( 2 )
[connection signal="health_changed" from="." to="Sprite/HealthBar" method="_on_JumpEnemy_health_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
